--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~8.2.8",
     "@angular/compiler": "~8.2.8",
     "@angular/core": "~8.2.8",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~8.2.8",
     "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~8.2.8",
