--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
+    "@angular/pwa": "^0.1000.5",
     "@angular/router": "~8.2.8",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.4.0",
