--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/pwa": "^0.1000.5",
     "@angular/router": "~8.2.8",
+    "@angular/service-worker": "~8.2.8",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
